--- a/index.html
+++ b/index.html
@@ -38,16 +38,23 @@
 
   <script>
       window.onload = function(){
+          $.get("https://www.gabrielavelitch.com/assets/internals/gkv_footer.html", function(data){
+              $("#gkv_footer").html(data);})}
+  </script>
+
+  <script>
+      window.onload = function(){
           $.get("https://www.gabrielavelitch.com/assets/internals/gkv_nav.html", function(data){
-              $("#gkv_nav").html(data);})}
+              $("#gkv_footer").html(data);})}
   </script>
 
 
 </head>
 <body>
 
-<!-- Navbar-->
-  <div id="gkv_nav"></div>
+
+  <!-- Footer-->
+    <div id="gkv_nav"></div>
 
 
 <section data-bs-version="5.1" class="header13 cid-sYsm6ZTLsK mbr-fullscreen mbr-parallax-background" id="header13-1">
@@ -275,11 +282,7 @@
 
 <!-- Footer-->
   <div id="gkv_footer"></div>
-  <script>
-      window.onload = function(){
-          $.get("https://www.gabrielavelitch.com/assets/internals/gkv_footer.html", function(data){
-              $("#gkv_footer").html(data);})}
-  </script>
+
 </section>
 
 <section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> site themes</p></section>
