--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <script>
       window.onload = function(){
           $.get("https://www.gabrielavelitch.com/assets/internals/gkv_nav.html", function(data){
-              $("#gkv_footer").html(data);})}
+              $("#gkv_nav").html(data);})}
   </script>
 
 
