--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-0MB26WWVES');
 </script>
 
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>corkino</title>
+  <title>Home</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -35,41 +35,45 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
   <link rel="preload" as="style" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
 
+  <!-- include internals -->
+  <script>
+  function includeHTML() {
+    var z, i, elmnt, file, xhttp;
+    /* Loop through a collection of all HTML elements: */
+    z = document.getElementsByTagName("*");
+    for (i = 0; i < z.length; i++) {
+      elmnt = z[i];
+      /*search for elements with a certain atrribute:*/
+      file = elmnt.getAttribute("w3-include-html");
+      if (file) {
+        /* Make an HTTP request using the attribute value as the file name: */
+        xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+          if (this.readyState == 4) {
+            if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+            if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+            /* Remove the attribute, and call this function once more: */
+            elmnt.removeAttribute("w3-include-html");
+            includeHTML();
+          }
+        }
+        xhttp.open("GET", file, true);
+        xhttp.send();
+        /* Exit the function: */
+        return;
+      }
+    }
+  }
+  </script>
 
-
-</head>
 <body>
 
-  <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-s">
-    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-        <div class="container">
-            <div class="navbar-brand">
-                <span class="navbar-logo">
-                    <a href="https://www.gabrielavelitch.com/index.html">
-                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="" style="height: 3rem;">
-                    </a>
-                </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.gabrielavelitch.com/index.html">Gabriela Velitch</a></span>
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li></ul>
-            </div>
-        </div>
-    </nav>
-</section>
+
+  <!-- Navbar-->
+<div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
+
 
 <section data-bs-version="5.1" class="features11 cid-sYxMYNsL7k" id="features12-13">
-
-
-
     <div>
         <div class="m-0 row align-items-center">
             <div class="col-12 col-lg offset-lg-1">
@@ -86,7 +90,6 @@
                                 <li>USB-powered</li>
                             </ul>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -99,8 +102,8 @@
     </div>
 </section>
 
-<section data-bs-version="5.1" class="content8 cid-sYxOk3dOOO" id="content8-15">
 
+<section data-bs-version="5.1" class="content8 cid-sYxOk3dOOO" id="content8-15">
     <div class="container">
         <div class="row justify-content-center">
             <div class="counter-container col-md-12 col-lg-8">
@@ -118,6 +121,7 @@
     </div>
 </section>
 
+
 <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
   <div class="container">
         <div class="row justify-content-center">
@@ -129,6 +133,7 @@
         </div>
     </div>
 </section>
+
 
 <section data-bs-version="5.1" class="tabs content18 cid-sYxOhZdd7S" id="tabs1-14">
     <div class="container">
@@ -169,6 +174,7 @@
     </div>
 </section>
 
+
 <section data-bs-version="5.1" class="image3 cid-sYQONaZvSe" id="image3-1r">
                         <div class="container-fluid">
                             <div class="row justify-content-center">
@@ -181,32 +187,11 @@
                         </div>
                     </section>
 
-<section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-t">
-    <div class="container">
-        <div class="media-container-row align-center mbr-white">
-            <div class="row social-row">
-                <div class="social-list align-right pb-2">
-                <div class="soc-item">
-                        <a href="https://github.com/Velitch" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
-                        </a>
-                    </div><div class="soc-item">
-                        <a href="https://instagram.com/velitch?utm_medium=copy_link" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
-                        </a>
-                    </div><div class="soc-item">
-                        <a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
-                        </a>
-                    </div></div>
-            </div>
-            <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">
-                    <a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/" class="text-primary">© Gabriela Velitch 2022.</a></p>
-            </div>
-        </div>
-    </div>
-</section>
+
+<!-- Footer-->
+<div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
+
+
 
 <section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website creator - <a href="https://mobirise.site/o" style="color:#aaa;">More here</a></p></section>
 
