--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Home</title>
+  <title>corkino</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
