--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -185,7 +185,9 @@
  <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
-
+ <script>
+ includeHTML();
+ </script>
 
   </body>
 </html>
