--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -204,7 +204,9 @@
  <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/mbr-tabs/mbr-tabs.js"></script>
-
+ <script>
+ includeHTML();
+ </script>
 
   </body>
 </html>
