--- a/pages/tools.html
+++ b/pages/tools.html
@@ -142,7 +142,7 @@
   <!-- Footer-->
   <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
 
-  
+
 <section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
 
 
@@ -156,7 +156,9 @@
  <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+ <script>
+ includeHTML();
+ </script>
 
   </body>
 </html>
