--- a/pages/learn.html
+++ b/pages/learn.html
@@ -100,9 +100,9 @@
                             <div class="text-wrapper">
 
                                 <h5 class="card-title mbr-fonts-style display-5">
-                                    <strong>MaxMSP</strong></h5>
+                                    <strong>Storiadella Musica Elettroacustica</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">A Playground for Invention,<br>Max is an infinitely flexible space to create your own interactive software<br></p>
-                                <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/maxmsptools.html" class="btn btn-primary display-4">Learn more</a></div>
+                                <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_elettroacustica/introduzione.html" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
@@ -160,6 +160,6 @@
  includeHTML();
  </script>
 
- 
+
   </body>
 </html>
