--- a/pages/learn/storia_della_musica_elettroacustica/introduzione.html
+++ b/pages/learn/storia_della_musica_elettroacustica/introduzione.html
@@ -85,10 +85,11 @@
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>Video with description</strong>
+                        <strong>György Ligeti - String quartet No.2</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Use Mobirise website building software to create multiple sites for commercial and non-profit projects. Click on the video preview in this block to add the link to your video. Make sure that your video is not private. You can add a description below the video. If you want to hide some of the text fields, open the Block parameters, and uncheck relevant options.</p>
+                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
+                    </p>
                 </div>
             </div>
         </div>
