--- a/pages/learn/storia_della_musica_elettroacustica/introduzione.html
+++ b/pages/learn/storia_della_musica_elettroacustica/introduzione.html
@@ -73,7 +73,7 @@
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
 
-
+  <!-- Video-->
 <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
     <div class="container">
         <div class="title-wrapper mb-5">
@@ -95,7 +95,6 @@
         </div>
     </div>
 </section>
-
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
