--- a/pages/learn/storia_della_musica_elettroacustica/storia_della_musica_elettroacustica.html
+++ b/pages/learn/storia_della_musica_elettroacustica/storia_della_musica_elettroacustica.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Leggi della Gestalt</title>
+  <title>Home</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -72,36 +72,6 @@
   <!-- Navbar-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
-  <!-- Title-->
-<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Leggi della Gestalt</strong></h4>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-  <!-- Text-->
-
-
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    <strong>Perché ci occupiamo della Gestalt:</strong> Quando analizziamo un pezzo di cui non sappiamo nulla e di cui non esiste partitura, ammesso poi che questi testi siano analizzabili, sulla base di che cosa analizziamo un flusso sonoro isolando degli elementi?
-                    <br>
-                    Per giustificare i nostri elementi di distinzione ricorriamo a dei principi gestaltici, negli anni '70 '80 riportati nel dominio dell'ascolto. Applichiamo questi principi se non possiamo appellarci a nessun tipo di repertorio di concetti che ti permettono di convalidare le tue osservazioni. Principi di base che ci permettono di giustificare l'ovvio.
-
-                  </p>
-                </div>
-            </div>
-        </div>
-    </section>
 
   <!-- Video-->
 <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
