--- a/pages/learn/storia_della_musica_elettroacustica/introduzione.html
+++ b/pages/learn/storia_della_musica_elettroacustica/introduzione.html
@@ -125,7 +125,7 @@
                     </ul>
                     <br>
                     <br>
-                    <p>
+                    <p class="mbr-text mbr-fonts-style display-7">
                     È importante distinguere i vari elementi per definire l’atteggiamento di articolazione e variabilità dei suoni in un flusso complesso. Non chiamiamo i vari flussi voci, poiché la voce è un concetto astratto, ed il concetto di voce porta con se un’idea di omogeneità. La mancanza di supporti concettuali fa si che prevalga il concetto di flusso piuttosto che quello di voce. Il flusso ci permette di classificare ciò che non ha classe.
                     </p>
                     <br>
