--- a/pages/learn/storia_della_musica_elettroacustica.html
+++ b/pages/learn/storia_della_musica_elettroacustica.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Home</title>
+  <title>Storia della Musica Elettroacustica</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -73,28 +73,25 @@
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
 
-  <!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-    <div class="container">
-        <div class="title-wrapper mb-5">
-        </div>
-        <div class="row align-items-center">
-            <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-            </div>
-            <div class="col-12 col-lg">
-                <div class="text-wrapper">
-                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2</strong>
-                    </h5>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
-                    </p>
-                </div>
-            </div>
-        </div>
+  <!-- Index-->
+
+  <div class="table">
+    <div class="row">
+      <div class="title">Big text here</div>
+      <div class="dots"></div>
+      <div class="value">57 MB</div>
     </div>
-</section>
+    <div class="row">
+      <div class="title">Small title text</div>
+      <div class="dots"></div>
+      <div class="value">104 MB</div>
+    </div>
+    <div class="row">
+      <div class="title">One more for good luck</div>
+      <div class="dots"></div>
+      <div class="value">4.8 MB</div>
+    </div>
+  </div>
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
