--- a/pages/maxmsp/allpass.html
+++ b/pages/maxmsp/allpass.html
@@ -85,7 +85,8 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-8">
                 <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>allpass</strong> - is a signal processing filter that passes all frequencies equally in gain, but changes the phase relationship among various frequencies.</p>
+                  <strong>allpass</strong> - is a signal processing filter that passes all frequencies equally in gain, but changes the phase relationship among various frequencies.
+                </p>
 
 
 <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
