--- a/pages/learn.html
+++ b/pages/learn.html
@@ -101,7 +101,7 @@
 
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Storia della Musica Elettroacustica</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">A Playground for Invention,<br>Max is an infinitely flexible space to create your own interactive software<br></p>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4">dal 1948 ad oggi</p>
                                 <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_elettroacustica.html" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
                         </div>
