--- a/pages/learn.html
+++ b/pages/learn.html
@@ -120,8 +120,8 @@
                             <div class="text-wrapper">
 
                                 <h5 class="card-title mbr-fonts-style display-5">
-                                    <strong>Faust</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">Faust (Functional Audio Stream) is a functional programming language for sound synthesis and audio processing</p>
+                                    <strong>Il Paradigma di Stockhausen</strong></h5>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4">coming soon</p>
                                 <div class="mbr-section-btn"><a href="" class="btn btn-primary display-4">Coming soon!</a></div>
                             </div>
                         </div>
