--- a/pages/learn.html
+++ b/pages/learn.html
@@ -72,10 +72,11 @@
   <!-- Navbar-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
+
+  <!-- Header-->
 <section data-bs-version="5.1" class="info3 cid-sYzbPCvQ7r mbr-parallax-background" id="info3-1g">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
     </div>
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="card col-12 col-lg-10">
