--- a/pages/learn/storia_della_musica_elettroacustica/storia_della_musica_elettroacustica.html
+++ b/pages/learn/storia_della_musica_elettroacustica/storia_della_musica_elettroacustica.html
@@ -93,7 +93,20 @@
 
   <!-- Index-->
 
-
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-8">
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    <strong>Perché ci occupiamo della Gestalt:</strong>
+                    <br>
+                    <br>
+                    Quando analizziamo un pezzo di cui non sappiamo nulla e di cui non esiste partitura, ammesso poi che questi testi siano analizzabili, sulla base di che cosa analizziamo un flusso sonoro isolando degli elementi?
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
