--- a/pages/learn.html
+++ b/pages/learn.html
@@ -108,7 +108,7 @@
                         </div>
                         <div class="col-12 col-md-5">
                             <div class="img-wrapper">
-                                <img src="https://www.gabrielavelitch.com/assets/images/cycling-74-logo.svg-432x237.png">
+                                <img src="https://www.gabrielavelitch.com/assets/images/spectrogram.png">
                             </div>
                         </div>
                     </div>
