--- a/pages/projects.html
+++ b/pages/projects.html
@@ -118,7 +118,7 @@
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Dual Channel DIBox</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">Indispensable tool in any concert or studio context</p>
-                                <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/projects/dualdibox.html" class="btn btn-primary display-4">Learn more</a></div>
+                                <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/projects/dualdibox.html" class="btn btn-primary display-4">Coming Soon!</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
