--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -97,11 +97,9 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
+                <h3>INDICE</h3>
                   <p class="mbr-text mbr-fonts-style display-7">
-                    <strong>Perché ci occupiamo della Gestalt:</strong>
-                    <br>
-                    <br>
-                    Quando analizziamo un pezzo di cui non sappiamo nulla e di cui non esiste partitura, ammesso poi che questi testi siano analizzabili, sulla base di che cosa analizziamo un flusso sonoro isolando degli elementi?
+                    
                   </p>
                 </div>
             </div>
