--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -93,18 +93,22 @@
 
   <!-- Index-->
 
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
       <div class="container">
           <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                <h3>INDICE</h3>
+              <div class="col-md-12 col-lg-10">
+                  <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+                      INDICE
+                  </h4>
                   <p class="mbr-text mbr-fonts-style display-7">
-                    
+                    <ul>
+                      <li>Leggi della Gestalt</li>
+                    </ul>
                   </p>
-                </div>
-            </div>
-        </div>
-    </section>
+              </div>
+          </div>
+      </div>
+  </section>
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
