--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -98,12 +98,12 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-10">
                   <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+                    <br>
+                    <br>
                       INDICE
                   </h4>
                   <p class="mbr-text mbr-fonts-style display-7">
-                    <ul>
-                      <li>Leggi della Gestalt</li>
-                    </ul>
+                    - Leggi della Gestalt
                   </p>
               </div>
           </div>
