--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -103,7 +103,14 @@
                       INDICE
                   </h4>
                   <p class="mbr-text mbr-fonts-style display-7">
-                    - Leggi della Gestalt
+                    <strong>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_della_musica_elettroacustica/leggi_della_gestalt.html" class="text-primary"><b>Leggi della Gestalt</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>prova</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>prova</b></a>
+                    </strong>
+
+                    <br>
+                    <br>
                   </p>
               </div>
           </div>
