--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -105,8 +105,8 @@
                   <p class="mbr-text mbr-fonts-style display-7">
                     <strong>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/leggi_della_gestalt.html" class="text-primary"><b>Leggi della Gestalt</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>prova</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>prova</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html" class="text-primary"><b>Nascita della Musica Concreta</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/.html" class="text-primary"><b>prova</b></a>
                     </strong>
 
                     <br>
