--- a/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
+++ b/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Leggi della Gestalt</title>
+  <title>Nascita della Musica Concreta</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Leggi della Gestalt</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Nascita della Musica Concreta</strong></h4>
             </div>
         </div>
     </div>
