--- a/pages/learn/storia_elettroacustica/leggi_della_gestalt.html
+++ b/pages/learn/storia_elettroacustica/leggi_della_gestalt.html
@@ -148,7 +148,7 @@
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2</strong>
+                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
                       Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
