--- a/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
+++ b/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
@@ -94,7 +94,6 @@
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
 
-
                   </p>
                 </div>
             </div>
@@ -122,6 +121,78 @@
             </div>
         </div>
     </div>
+</section>
+
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/CTf0yE15zzI" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Pierre Schaeffer - Etude de Bruits (1948)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Schaeffer ad ogni modo continua il suo percorso verso l’estetica dei “suoni trovati”, realizzando i "Cinq Etudes de Bruits" (utilizza il solco chiuso, antecedente del loop su nastro, ripetizione, dunque ritmo, quindi musica, nei 5 studi indaga 5 aspetti diversi e realizza quello che diverrà l’archetipo della musica concreta, Essai, GRMC).
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/MOYNFu45khQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>P. Henry, P. Schaeffer - Sinfonia per un uomo solo (1950)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                  Altro brano concretista che si pone alla base della storia elettronica è la "Sinfonia per un uomo solo" di Pierre_Henry (compositore con Schaeffer).
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/XJq3jItducg" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Pierre Schaeffer - Orphèe 53 (1953)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Porterà alla realizzazione nel 1951 del magnetofono. L’"Orphèe 53" di Schaeffer inaugura la spazializzazione. Fu un fiasco poiché Schaeffer non capiva la musica contemporanea e chi lo ascoltava non capiva cosa stesse facendo. Il pubblico la concepiva come opera radiofonica, non come musica, viene dunque accusato di dilettantismo. Dopo questo fiasco capisce che il compositore di musica concreta è come un raccoglitore di conchiglie, colleziona molto materiale sonoro ma il risultato anche se diverso risulta sempre come un collage (detto dai tedeschi). Schaeffer cerca di capire cosa manca alla musica concreta per arrivare al livello musicale dei compositori d’avanguardia, e dalla sua decennale riflessione sul suono produce il Trattato degli oggetti musicali.
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
 </section>
 
 <br>
