--- a/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
+++ b/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
@@ -93,7 +93,10 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Data di nascita della musica elettronica: 1948, con gli studi di rumori di Pierre Schaeffer, primo prodotto sonoro realizzato solo con strumenti elettrici ed elettronici. Mentre con il Theremin ci si sforzava ad imitare il violino, adesso il prodotto artistico messo a punto da Schaeffer ha un'esclusività.
+                    <br>
+                    <br>
+                    É da qui che nasce la domanda che attraversa il secolo, <strong>cosa posso farci musicalmente con questi suoni elettronici?</strong>
                   </p>
                 </div>
             </div>
