--- a/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
+++ b/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
@@ -190,7 +190,7 @@
                       <strong>Pierre Schaeffer - Orphèe 53 (1953)</strong>
                   </h5>
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Porterà alla realizzazione nel 1951 del magnetofono. L’"Orphèe 53" di Schaeffer inaugura la spazializzazione. Fu un fiasco poiché Schaeffer non capiva la musica contemporanea e chi lo ascoltava non capiva cosa stesse facendo. Il pubblico la concepiva come opera radiofonica, non come musica, viene dunque accusato di dilettantismo. Dopo questo fiasco capisce che il compositore di musica concreta è come un raccoglitore di conchiglie, colleziona molto materiale sonoro ma il risultato anche se diverso risulta sempre come un collage (detto dai tedeschi). Schaeffer cerca di capire cosa manca alla musica concreta per arrivare al livello musicale dei compositori d’avanguardia, e dalla sua decennale riflessione sul suono produce il Trattato degli oggetti musicali.
+                    Porterà alla realizzazione nel 1951 del magnetofono. L’"Orphèe 53" di Schaeffer inaugura la spazializzazione. Fu un fiasco poiché chi lo ascoltava non capiva cosa stesse facendo. Il pubblico la concepiva come opera radiofonica, non come musica, viene dunque accusato di dilettantismo. Dopo questo fiasco capisce che il compositore di musica concreta è come un raccoglitore di conchiglie, colleziona molto materiale sonoro ma il risultato anche se diverso risulta sempre come un collage (detto dai tedeschi). Schaeffer cerca di capire cosa manca alla musica concreta per arrivare al livello musicale dei compositori d’avanguardia, e dalla sua decennale riflessione sul suono produce il Trattato degli oggetti musicali.
                   </p>
               </div>
           </div>
