--- a/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
+++ b/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
@@ -103,6 +103,21 @@
         </div>
     </section>
 
+
+  <!-- Cit-->
+    <section data-bs-version="5.1" class="content6 cid-sZjAv9K3j4" id="content6-2a">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-10">
+                    <hr class="line">
+                    <p class="mbr-text align-center mbr-fonts-style my-4 display-7"><strong>“<em>Se posso scrivere il suono, posso scrivere qualsiasi cosa</em>”</strong><br>Max Mathews</p>
+                    <hr class="line">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
   <!-- Video-->
 <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
     <div class="container">
@@ -166,7 +181,7 @@
                       <strong>P. Henry, P. Schaeffer - Sinfonia per un uomo solo (1950)</strong>
                   </h5>
                   <p class="mbr-text mbr-fonts-style display-7">
-                  Altro brano concretista che si pone alla base della storia elettronica è la "Sinfonia per un uomo solo" di Pierre_Henry (compositore con Schaeffer).
+                  Altro brano concretista che si pone alla base della storia elettronica è la "Sinfonia per un uomo solo" di Pierre Henry (compositore con Schaeffer).
                   </p>
               </div>
           </div>
