--- a/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
+++ b/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
@@ -217,6 +217,8 @@
 <br>
 
 
+
+
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
@@ -230,6 +232,25 @@
         </div>
     </div>
 </section>
+
+
+<!-- Text-->
+
+
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  <strong>Il Concretismo sancisce dunque la nascita della musica elettroacustica con i 5 studi sui rumori del 1948</strong>, utilizzando suoni e rumori presi dalla realtà. Gli strumenti elettronici, acquisiscono un loro linguaggio. Schaeffer fonda lo studio d’Essai e poi il GRMC, divenuto in seguito INA/GRM. Nel 1948 Schaeffer utilizza la tecnologia basandosi su una sua idea, ma senza avere alcun contatto con la musica d’avanguardia, utilizzerà infatti il sillon fermè (loop realizzato con solco chiuso su 78 giri), il reverse e il rallentamento e la velocizzazione dei frammenti.
+                  <br>
+                  <br>
+                  É da qui che nasce la domanda che attraversa il secolo, <strong>cosa posso farci musicalmente con questi suoni elettronici?</strong>
+                </p>
+              </div>
+          </div>
+      </div>
+  </section>
 
 
 <!-- Footer-->
