--- a/pages/learn/storia_elettroacustica/aspetti_acustico_mimetico.html
+++ b/pages/learn/storia_elettroacustica/aspetti_acustico_mimetico.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Aspetti Mimetico-Acustico</title>
+  <title>Mimetico-Aurale</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Aspetti Mimetico-Acustico</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Mimetico-Aurale</strong></h4>
             </div>
         </div>
     </div>
@@ -86,14 +86,16 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
                     Simon Emmerson ha elaborato un paradigma molto efficace. Stabilisce una polarità tra aspetti mimetici ed aspetti puramente acustici. Ci sono pezzi in cui è più importante l'aspetto morfologico del suono, altri in cui il mondo reale irrompe.
+                    <br>
+                    <br>
+                    <strong>Mimetica:</strong> componente molto soggettiva, non può essere universale.
+                    <strong>Aurale:</strong> componente sempre presente perché è alla base della nostra percezione.
                     </p>
                 </div>
             </div>
@@ -192,6 +194,57 @@
 
 <br>
 <br>
+
+
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Non esiste un ascolto puramente sonoro perché abbiamo l'esperienza. Siamo portati ad integrare ciò che ascoltiamo nel  nostro immaginario. La polarità del muoversi tra il mimetico e l'aurale (sonoro) può essere sfruttata in modo creativo.
+                  <br>
+                  <br>
+                  <strong>Aspetto contrario:</strong> tutta la musica mimetica, togliere la musica dal suo contesto e trasportarlo sulla tela bianca degli altoparlanti è quasi di una violenza inaudita. L'elemento acustico gioca un ruolo fondamentale.
+                  </p>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
+  <!-- Title-->
+<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="title col-md-12 col-lg-10">
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Livelli di Surrogazione</strong></h4>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Denis Smalley, teorizza i 4 livelli di surrogazioni che cercano di definire le fonti di ciò che ascoltiamo:
+                  <br>
+                  <br>
+                  <ul>
+                    <li><strong>Surrogazione 1:</strong> riconosco il suono</li>
+                    <li><strong>Surrogazione 2:</strong> suoni strumentali</li>
+                    <li><strong>Surrogazione 3:</strong> "mi sembra tipo..."</li>
+                    <li><strong>Surrogazione 4:</strong> suoni che non hanno una capacità esplicativa immediata</li>
+                  </ul>
+                  </p>
+              </div>
+          </div>
+      </div>
+  </section>
 
 
 <!-- Prev/Next-->
